--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
     </head>
 
     <body>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-1">col 1</div>
+                <div class="col-6">col 6</div>
+                <div class="col-5">col 5</div>
+            </div>
+            <div class="row">
+                <div class="col-6">col 6</div>
+                <div class="col-6">col 6</div>
+            </div>
+            <div class="row">
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+                <div class="col-1">col 1</div>
+            </div>
+        </div>
     </body>
 
 </html>
